@@ -5,6 +5,8 @@ xx/xx/2006 - 1.13.1-WIP
 	- Fix build with --disable-gnome-vfs --enable-fuse-module.  (Gentoo)
 	- ntfscluster: identify files even if their clusters aren't set
 	  in $Bitmap (useful to find potentially corrupted files). (Szaka)
+	- mkntfs: set the physical drive and the extended boot signature to
+	  0x80 in the Extended BPB which are needed to boot from disk. (Szaka)
 
 27/02/2006 - 1.13.0 - Lots and lots and lots of fixes and enhancements.
 
